--- a/acerca.html
+++ b/acerca.html
@@ -25,7 +25,9 @@
                 <div>
                     <h2>ACERCA DE...</h2><br>
                     <br><p>Esta es una practica realizada para la materia: Programacion de Aplicaciones Web
-                        de la Universidad Autonoma de Chiapas
+                        de la Universidad Autonoma de Chiapas.<br>
+
+                        Licenciatura en Sistemas Computacionales - Leonardo Abdiel Sánchez Ochoa - A210143 - 5-K - leonardo.sanchez99@unach.mx - 9612526874.
                     </p>
                 </div>
             </td>
