--- a/frontend.html
+++ b/frontend.html
@@ -25,7 +25,17 @@
                 <div>
                     <h2>FRONTEND</h2><br>
                     <center><img src="imagenes/Frontend.jpg" width="100px" height="100px"></center><br>
-                    <br><p><b>Un sistema de front-end es parte de un sistema de información al que el usuario accede directamente e interactua para recibir o utilizar las capacidades de back-end del sistema anfitrión. Permite a los usuarios acceder y solicitar las prestaciones y servicios del sistema de información subyacente. El sistema de front-end puede ser una aplicación de software o hardware o su combinación, así como recursos de la red</b></p>
+                    <br><p><b>Un sistema de front-end es parte de un sistema de información al que el usuario accede directamente e interactua para recibir o utilizar las capacidades de back-end del sistema anfitrión. Permite a los usuarios acceder y solicitar las prestaciones y servicios del sistema de información subyacente. El sistema de front-end puede ser una aplicación de software o hardware o su combinación, así como recursos de la red</b></p><br>
+                    <p>Los principales fundamentos del Frontend (desarrollo de la parte del cliente en una aplicación web) incluyen:
+                        <ol><br>
+                            <li><b>HTML (HyperText Markup Language):</b> HTML es el lenguaje de marcado utilizado para estructurar el contenido de una página web. Define la estructura y los elementos de la página, como encabezados, párrafos, listas, enlaces, imágenes y más.</li>
+                            <li><b>CSS (Cascading Style Sheets):</b> CSS se utiliza para dar estilo y diseño a los elementos HTML. Con CSS, puedes controlar el color, la tipografía, el diseño, el espaciado y otros aspectos visuales de tu sitio web.</li>
+                            <li><b>JavaScript:</b> JavaScript es un lenguaje de programación que se utiliza para agregar interactividad y funcionalidad a las páginas web. Puedes utilizar JavaScript para realizar acciones como validación de formularios, animaciones, manipulación del DOM (Document Object Model) y comunicación con servidores.</li>
+                            <li><B>Accesibilidad Web:</B> Garantizar que tu sitio web sea accesible para todas las personas, incluidas aquellas con discapacidades, es fundamental. Esto implica el uso de etiquetas HTML semánticas, atributos alt en imágenes, y considerar la navegación y la experiencia del usuario para quienes utilizan tecnologías de asistencia.</li>
+                        </ol><br>
+
+                        Estos son algunos de los fundamentos clave en el desarrollo frontend, y un buen desarrollador frontend debe tener un sólido conocimiento y habilidades en estos aspectos para crear sitios web efectivos y de alta calidad.
+                    </p>
                 </div>
             </td>
         </tr>
